@@ -3,13 +3,27 @@
 
 #include "spvm_native.h"
 
-
+#include <openssl/ssl.h>
+#include <openssl/err.h>
 
 static const char* FILE_NAME = "Net/SSLeay/RAND.c";
 
-int32_t SPVM__Net__SSLeay__RAND__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Net__SSLeay__RAND__seed(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_buf = stack[0].oval;
+  
+  int32_t num = stack[1].ival;
+  
+  if (!obj_buf) {
+    return env->die(env, stack, "The buffer $buf must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  const char* buf = env->get_chars(env, stack, obj_buf);
+  
+  RAND_seed(buf, num);
   
   return 0;
 }
-
 
