@@ -18,7 +18,15 @@ Net::SSLeay::RAND class in L<SPVM> represents RAND name space in OpenSSL.
 
 =head1 Class Methods
 
+=head2 seed
 
+C<static method seed : void ($buf : string, $num : int);>
+
+Calls native L<RAND_seed|https://docs.openssl.org/3.0/man3/RAND_add/> function.
+
+Exceptions:
+
+The buffer $buf must be defined. Otherwise an exception is thrown.
 
 =head1 See Also
 
