@@ -3,4 +3,7 @@
 
 class Net::SSLeay::RAND {
   
+  # Class Mehtods
+  native static method seed : void ($buf : string, $num : int);
+  
 }
