@@ -38,6 +38,7 @@
     * Add Net::SSLeay#get1_session method.
     * Add Net::SSLeay#set_session method.
     * Add Net::SSLeay::RAND class.
+    * Add Net::SSLeay::RAND#seed method.
     
 0.009 2024-11-08
   [Requirement Changes]
